--- a/src/1_1.md
+++ b/src/1_1.md
@@ -1,5 +1,5 @@
-1. Basics
-=========
+#Linux kernel articles
+##Basics
 
 You now have two possibilities:
  * You download a linux (ubuntu for example) and you launch it in a virtual machine.
