--- a/src/1_2.md
+++ b/src/1_2.md
@@ -1,5 +1,5 @@
-2. Module
-=========
+#Linux kernel articles
+##Module
 
 We can now start. Here, we'll learn how to create a static module (which is build with the kernel).
 
