--- a/src/1_6.md
+++ b/src/1_6.md
@@ -1,5 +1,5 @@
-6. Create a dynamic module
-==========================
+#Linux kernel articles
+##Create a dynamic module
 
 It can be very useful to know how to build a dynamic module. But be very careful when you use it because a bad code could corrupt your whole system.
 
