--- a/src/1_7.md
+++ b/src/1_7.md
@@ -1,3 +1,6 @@
+#Linux kernel articles
+##Sockets
+
 I'm gonna write a tutorial on kernel sockets. A source code of mine is available [here](https://github.com/brissa-a/NetMalloc/blob/master/net.c) and here:
 
 ```C
