--- a/src/1_3.md
+++ b/src/1_3.md
@@ -85,7 +85,7 @@ SYSCALL_DEFINE2(hello, unsigned int, begin, unsigned int, end)
 
 You will notice that SYSCALL_DEFINE0 is now SYSCALL_DEFINE2. I'm sure you already guessed but I say it: the number at the end is the number of parameter that your syscall needs.
 
-##Precision
+###Precision
 
 If you want your syscall to take a pointer as parameter, just know that you can't use "just like that". You're in kernel space, so you have to "import" (I simplify a lot) the pointer. Example:
 
@@ -100,6 +100,6 @@ SYSCALL_DEFINE3(hello, unsigned int, begin, unsigned int, end, unsigned int*, pt
 
 You're welcome !
 
-##More ?
+###More ?
 
 If you want more information about syscalls, here is a [little article](http://lwn.net/Articles/604287/) very interesting which speak about it.
