--- a/src/1_3.md
+++ b/src/1_3.md
@@ -4,11 +4,13 @@
 Here is a very interessant part of the linux kernel programming ! You always wondered "how can I add a syscall in my linux ?" ? Here is the answer !
 
 Go to your module folder and create a new one in it:
+
 ```Shell
 mkdir syscall
 ```
 
 Good. Now add its path to the current Makefile (the one in linux_test/linux/my_module/):
+
 ```Makefile
 obj-y += syscall/
 ```
@@ -34,6 +36,8 @@ Very easy isn't it ? But that's not all ! You have to do one more thing (or two,
 
 ```Shell
 cd ~/linux_test/linux/arch/x86/syscalls/
+# on more recent linux versions:
+cd ~/linux_test/linux/arch/x86/entry/syscalls/
 ```
 
 We are interested here by syscall_32.tbl and syscall_64.tbl. To add a syscall, go to the end of a file and add this line in (the first line is just an example):
