--- a/src/1_3.md
+++ b/src/1_3.md
@@ -42,26 +42,26 @@ cd ~/linux_test/linux/arch/x86/entry/syscalls/
 
 We are interested here by syscall_32.tbl and syscall_64.tbl. To add a syscall, go to the end of a file and add this line in (the first line is just an example):
 
-```
+```Text
 356	i386	memfd_create		sys_memfd_create
 357	i386	hello			sys_hello
 ```
 
 Be very careful in the syscall_64.tbl file ! If there is a "x32" in the line:
 
-```
+```Text
 544     x32     io_submit               compat_sys_io_submit
 ```
 
 You're not in the good place. Try to search the end of lines like this:
 
-```
+```Text
 320     common  kexec_file_load         sys_kexec_file_load
 ```
 
 Now you just have to add your syscall:
 
-```
+```Text
 321     common  hello                   sys_hello
 ```
 
