Fix markdown issue

--- a/src/1_3.md
+++ b/src/1_3.md
@@ -71,7 +71,7 @@ You can now build but if you want to test your syscall, just modify or create a 
 syscall(__NR_hello, 0);
 ```
 
-If it says __NR_hello isn't defined, replace it with your syscall number:
+If it says `__NR_hello` isn't defined, replace it with your syscall number:
 
 ```C
 syscall(357, 0);
