Replace http with https

--- a/src/1_1.md
+++ b/src/1_1.md
@@ -10,6 +10,7 @@ Since there already have a lot of tutorials that explain how to run a linux in a
 First, download [qemu](http://wiki.qemu.org/Download).
 
 Then, we have to build a busybox. Here are the commands you have to enter:
+
 ```Shell
 cd # to go back to your home directory
 mkdir linux_test # now we create a linux folder where everything will be done
@@ -22,6 +23,7 @@ sudo make install # You can do this without being root but it can fails if you'r
 ```
 
 Now let's build a rootfs (without it, launching linux kernel will be hard !):
+
 ```Shell
 dd if=/dev/zero of=disk.img bs=1M count=16
 mkfs.ext4 disk.img -L root
@@ -38,17 +40,18 @@ chmod +x etc/init.d/rcS
 ```
 
 Now let's get to the long part. Don't worry, it's not complicated, just very long. You'll understand why in a few seconds. Now let's download and compile the linux kernel:
+
 ```Shell
 git clone --depth 1 git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
 make defconfig
 make
 ```
 
-![compiling !](http://imgs.xkcd.com/comics/compiling.png)
+![compiling!](https://blog.guillaume-gomez.fr/images/compiling.png)
 
 And now just wait. Take a coffee or something.
 
-Done ? Good ! Now we can start !
+Done? Good! Now we can start!
 
 ##Launching qemu
 
@@ -58,7 +61,7 @@ Very simple:
 qemu-system-x86_64 -kernel /path/to/linux/arch/x86/boot/bzImage -hda /path/to/rootfs/disk.img -append "root=/dev/sda console=ttyS0" -nographic
 ```
 
-If it launched successfully, congratulations ! To quit qemu, you now just have to kill it (no kidding). To help you:
+If it launched successfully, congratulations! To quit qemu, you now just have to kill it (no kidding). To help you:
 
 ```Shell
 kill $(ps aux | grep '[q]emu' | awk '{print $2}')
