--- a/src/1_1.md
+++ b/src/1_1.md
@@ -47,7 +47,7 @@ make defconfig
 make
 ```
 
-![compiling!](https://blog.guillaume-gomez.fr/images/compiling.png)
+![compiling!](https://blog.guillaume-gomez.fr/blog/images/compiling.png)
 
 And now just wait. Take a coffee or something.
 
