--- a/src/1_1.md
+++ b/src/1_1.md
@@ -53,7 +53,7 @@ And now just wait. Take a coffee or something.
 
 Done? Good! Now we can start!
 
-##Launching qemu
+###Launching qemu
 
 Very simple:
 
