--- a/src/1_3.md
+++ b/src/1_3.md
@@ -1,7 +1,7 @@
 #Linux kernel articles
 ##Syscall
 
-Here is a very interessant part of the linux kernel programming ! You always wondered "how can I add a syscall in my linux ?" ? Here is the answer !
+Here is a very interesting part of the linux kernel programming! You always wondered "how can I add a syscall in my linux ?"? Here is the answer!
 
 Go to your module folder and create a new one in it:
 
