--- a/src/1_4.md
+++ b/src/1_4.md
@@ -20,7 +20,7 @@ unsigned long original_cr0;
 
 asmlinkage int new_syscall(unsigned int size, unsigned long *ptr)
 {
-  printk("I'm the syscall which overwritten the previous !\n");
+  printk("I'm the syscall which overwrittes the previous !\n");
   return 0;
 }
 
